--- a/Home_work_5.html
+++ b/Home_work_5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Home work 5</title>
-   <link rel="stylesheet" href="./css/reset.css">
+   <!-- <link rel="stylesheet" href="./css/reset.css"> -->
    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -32,29 +32,31 @@
 	  	<a href="#"><img src="./img/facebook.jpg"></a>
 	  </div>
 	  <form>
-        <fieldset class="form">
-        	 <legend>OU</legend>
-        	 <div>
-        	 	<input type="text" placeholder="&nbsp&nbsp&nbsp&nbsp First name"> 
+        <div class="form">
+        <fieldset class="line">
+           <legend>OU</legend>
+        </fieldset> 
+           <div>
+        	 	<input type="text" placeholder="First name"> 
         	    </input>
         	 </div>
         	 <div>
-        	 	<input type="text" placeholder="&nbsp&nbsp&nbsp&nbsp Last name">
+        	 	<input type="text" placeholder="Last name">
         	 	</input>
         	 </div>
         	 <div>
-        	 	<input type="email" placeholder="&nbsp&nbsp&nbsp&nbsp Email Address">
+        	 	<input type="email" placeholder="Email Address">
         	    </input>
              </div>
         	 <div>
-        	 	<input type="password" placeholder="&nbsp&nbsp&nbsp&nbsp Choose Password">
+        	 	<input type="password" placeholder="Choose Password">
         	    </input>
         	 </div>
         	 <div>
-                <input type="password" placeholder="&nbsp&nbsp&nbsp&nbsp Password Confirm">
+                <input type="password" placeholder="Password Confirm">
                 </input>
         	 </div>
-        </fieldset>	 
+        </div>	 
         	 <div class="send">
         	 	<input type="checkbox">Send me Youbike updates and tips</input>
         	 	<label for=""></label>
